--- a/EIPS/eip-1485.md
+++ b/EIPS/eip-1485.md
@@ -180,12 +180,13 @@ And Current FNV1A implementation is based on Most of EThash , which verified for
 Another propose of big differencing the Ethash algorithm need to crypto analysis for a long times and need to GPU code optimization times.
 
 **Examples**
-orignal ethminer -> claymore optimized miner [1years]
+original ethminer -> claymore optimized miner [1years]
+
 genoil ethminer -> ethereum-mining/ethminer  [2years]
 
 ## Test Results::
 
-Tethash miner has 2~3% of hashrate degrade , because of more core computation time. worked very well.
+TethashV1 miner has 2~3% of hashrate degrade , because of more core computation <double multiplication in 1 fnv1a()> time. it worked very well.
 
 ## Simia
 
